<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="gameResult"
            type="com.example.composition.domain.entity.GameResult" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/imageViewResultSmile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:isWinner="@{gameResult.winner}"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/result_smile"
        tools:srcCompat="@drawable/happy" />

    <Button
        android:id="@+id/buttonTryAgain"
        style="@style/Level"
        android:text="@string/try_again"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCountOfRightAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:countOfRequiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
        tools:text="@string/countOfRightAnswers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:countOfRightAnswers="@{gameResult.countOfRightAnswers}"
        tools:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountOfRightAnswers" />

    <TextView
        android:id="@+id/textViewNecessaryPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:requiredPercent="@{gameResult.gameSettings.minPercentOfRightAnswers}"
        tools:text="@string/necessary_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewScore" />

    <TextView
        android:id="@+id/textViewRightAnswersPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:rightAnswersPercent="@{gameResult}"
        tools:text="@string/right_answers_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNecessaryPercent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>